Fixed the Gap bug

--- a/home/style.css
+++ b/home/style.css
@@ -648,7 +648,7 @@ button {
   .hc2 {
     width: 100vw;
     /* height: 100%; */
-    padding-top: 5rem;
+    padding-top: 10rem;
     z-index: 1;
     display: flex;
     flex-direction: column;
@@ -673,6 +673,7 @@ button {
     color: #797979;
   }
   .hc2 input {
+    margin-top: 4rem;
     background-color: #e8e4ff;
     margin-bottom: 2rem;
     color: #5236ff;
@@ -690,7 +691,7 @@ button {
   }
   .services {
     width: 100vw;
-    margin: 40rem auto;
+    margin: 50rem auto;
     margin-bottom: 10rem;
   }
   .services h1 {
